--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
-Package: disentangle
+Package: Disentangle
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
-Date: 2012-11-30
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Title: Disentangle
+Version: 1.1
+Date: 2014-03-26
+Author: ivanhanigan
+Maintainer: <ivan.hanigan@gmail.com>
+Depends: ggmap, maps, maptools, rgdal
+Description:  Functions I modified or created.
+License: GPL (>= 2)
