--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: disentangle
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
+Title: disentanWhat the package does (short line)
+Version: 1.1
 Date: 2012-11-30
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: ivanhanigan
+Maintainer: Who to complain to <ivan.hanigan@gmail.com>
+Description: disentangle things
+License: GPL (>= 2)
