--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: disentangle
 Type: Package
-Title: disentanWhat the package does (short line)
-Version: 1.1
-Date: 2012-11-30
+Title: disentangling data tools 
+Version: 1.2
+Date: 2014-06-24
 Author: ivanhanigan
 Maintainer: Who to complain to <ivan.hanigan@gmail.com>
 Description: disentangle things
