--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: disentangle
 Type: Package
 Title: disentangling data tools 
-Version: 1.4.2
-Date: 2014-10-02
+Version: 1.4.3
+Date: 2015-05-03
 Author: ivanhanigan
 Maintainer: Who to complain to <ivan.hanigan@gmail.com>
+Depends: stringr
 Description: disentangle things
 License: GPL (>= 2)
