add newnode df help with title

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: Disentangle
+Package: disentangle
 Type: Package
-Title: Disentangle
+Title: disentangle
 Version: 1.2
 Date: 2015-06-10
 Author: ivanhanigan
