move newnode_df to replace old newnode now deprecated

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: disentangle
 Type: Package
 Title: disentangle
-Version: 1.4.4
-Date: 2015-06-10
+Version: 1.4.5
+Date: 2015-08-30
 Author: ivanhanigan
 Maintainer: <ivan.hanigan@gmail.com>
-Suggests: stringr, ggmap, maps, maptools, rgdal
-Description:  Functions I modified or created.
+Suggests: stringr, ggmap, maps, maptools, rgdal, sqldf
+Description:  Functions for helping to disentangle data and analysis pipelines.
 License: GPL (>= 2)
